# monetary-evolution

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
monetary_evolution/: asgi.py  settings.py  urls.py  wsgi.py
monetary_evolution/apps/core/: apps.py  models.py  repository.py  service.py
monetary_evolution/apps/core/management/commands/: create_super_user.py  input_initial_data.py
monetary_evolution/apps/monetary/: admin.py  apps.py  models.py  service.py  urls.py  views.py
monetary_evolution/apps/monetary/migrations/: 0001_initial.py
monetary_evolution/apps/monetary/templates/charts/: index.html
monetary_evolution/apps/repositories/: api_vatcomply.py
monetary_evolution/apps/services/: api_vatcomply.py
scripts/: start-for-local-development.sh
