[tool.poetry]
name = "monetary-evolution"
version = "0.1.0"
description = ""
authors = ["derek.coelho <derek.coelho.ext@vr.com.br>"]
readme = "README.md"
packages = [{include = "monetary_evolution"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
